--- a/Whats/package.json
+++ b/Whats/package.json
@@ -15,6 +15,8 @@
     "@supabase/supabase-js": "^2.57.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-mask": "^1.1.18",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
